--- a/dev-portfolio.html
+++ b/dev-portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Koketso</title>
-  <link rel="stylesheet" href="example.css">
+  <link rel="stylesheet" href="dev-portfolio.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -23,18 +23,18 @@
         <source src="galaxy.mp4" type="video/mp4"/>
     </video>
     <h1>HELLO</h1>
-    <p>I'm Koketso, your web developer!</p>
+    <p>KOKETSO - FRONT END DEVELOPER!</p>
   </div>
 
-  <div class="weather">
-    <h2>&mdash;</h2>
-    <p>&mdash;</p>
-  </div>
+  
+  <a href="weather.html">
+    <div class="weather"></div>
+  </a>
 
     <footer>
     <div class="footer-icons">
     <a href="https://x.com/KoketsoPlus" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="www.linkedin.com/in/chabalalakoketso" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a href="www.linkedin.com/in/chabalalakoketso/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     <a href="https://github.com/KoketsoPlus" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 </footer>
