--- a/dev-portfolio.html
+++ b/dev-portfolio.html
@@ -13,7 +13,7 @@
                 <a href="#"><li>Home</li></a>
                 <a href="#"><li>About</li></a>
                 <a href="#"><li>Projects</li></a>
-                <a href="#"><li>Contact Me</li></a>
+                <a href="contact-me.html"><li>Contact Me</li></a>
             </ul>
         </div>
     </header>
