Added finishing touches to my portfolio, awaiting review

--- a/dev-portfolio.html
+++ b/dev-portfolio.html
@@ -10,8 +10,8 @@
         <header>
         <div class="nav">
             <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>About</li></a>
+                <a href="dev-portfolio.html"><li>Home</li></a>
+                <a href="about.html"><li>About</li></a>
                 <a href="#"><li>Projects</li></a>
                 <a href="contact-me.html"><li>Contact Me</li></a>
             </ul>
@@ -23,7 +23,7 @@
         <source src="galaxy.mp4" type="video/mp4"/>
     </video>
     <h1>HELLO</h1>
-    <p>KOKETSO - FRONT END DEVELOPER!</p>
+    <p>KOKETSO - 3D ENTHUSIAST AND FRONT-END DEVELOPER!</p>
   </div>
 
   
@@ -34,7 +34,7 @@
     <footer>
     <div class="footer-icons">
     <a href="https://x.com/KoketsoPlus" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="www.linkedin.com/in/chabalalakoketso/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a href="www.linkedin.com/in/chabalalakoketso" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     <a href="https://github.com/KoketsoPlus" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 </footer>
