--- a/contact-me.html
+++ b/contact-me.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact-me.css">
-    <title>contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+  <link rel="stylesheet" href="contact-me.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    
- <form class="form">
-  <h1>Contact Me</h1><hr>
-  <hr class="line" />
-  
-  <input class="input" type="text" placeholder="Name" required />
-  <input class="input" type="email" placeholder="E-mail" required />
-  
-  <textarea class="textarea" placeholder="Message" required></textarea>
-  
-  <button type="submit" class="button">Submit</button>
-</form>
+     <header>
+        <div class="nav">
+            <ul>
+                <a href="dev-portfolio.html"><li>Home</li></a>
+                <a href="about.html"><li>About</li></a>
+                <a href="#"><li>Projects</li></a>
+                <a href="contact-me.html"><li>Contact Me</li></a>
+            </ul>
+        </div>
+    </header>
+
+  <section class="contact-section">
+    <h1>CONTACT</h1>
+    <div class="contact-container">
+      <form class="contact-form">
+        <input type="text" placeholder="NAME" required>
+        <input type="email" placeholder="EMAIL" required>
+        <textarea placeholder="MESSAGE" required></textarea>
+        <button type="submit"><i class="fa fa-paper-plane"></i></button>
+      </form>
+      <div class="contact-info">
+        <p><i class="fa fa-location-dot"></i> Pretoria, Gauteng</p>
+        <p><i class="fa fa-phone"></i> (+27) 72 449 8734</p>
+        <p><i class="fa fa-envelope"></i> kchabalala1105@gmail.com</p>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+        <p class="rights">© ALL OF THE RIGHTS RESERVED</p>
+      </div>
+    </div>
+  </section>
+</body>
+        <footer>
+    <div class="footer-icons">
+    <a href="https://x.com/KoketsoPlus" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="www.linkedin.com/in/chabalalakoketso" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://github.com/KoketsoPlus" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+</footer>
 </body>
 </html>
