Changed the name of my main html page to index.html

--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
      <header>
         <div class="nav">
             <ul>
-                <a href="dev-portfolio.html"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="#"><li>Projects</li></a>
                 <a href="contact-me.html"><li>Contact Me</li></a>
@@ -32,11 +32,11 @@
         <p><i class="fa fa-location-dot"></i> Pretoria, Gauteng</p>
         <p><i class="fa fa-phone"></i> (+27) 72 449 8734</p>
         <p><i class="fa fa-envelope"></i> kchabalala1105@gmail.com</p>
-        <div class="social-icons">
+        <!--<div class="social-icons">
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
-        </div>
+        </div>-->
         <p class="rights">© ALL OF THE RIGHTS RESERVED</p>
       </div>
     </div>
