--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Koketso</title>
-  <link rel="stylesheet" href="dev-portfolio.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
         <header>
         <div class="nav">
             <ul>
-                <a href="dev-portfolio.html"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="#"><li>Projects</li></a>
                 <a href="contact-me.html"><li>Contact Me</li></a>
