--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
             <header>
         <div class="nav">
             <ul>
-                <a href="dev-portfolio.html"><li>Home</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="#"><li>Projects</li></a>
                 <a href="contact-me.html"><li>Contact Me</li></a>
