--- a/weather.html
+++ b/weather.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Weather Forecast</title>
   <link rel="stylesheet" href="weather.css">
-  <script defer src="weather.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <div class="weather-app">
